--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,65 +1,65 @@
-#ENC[AES256_GCM,data:DnMNAv8qykDLh001,iv:VjzOpTuynN3qB6Lv4BZdnvjk6pK0lPXIrC0/zh2Zalw=,tag:rGLf8dEPi7MQWyYZWoDboQ==,type:comment]
-PROXMOX_IP: ENC[AES256_GCM,data:Pjno5fsK3Ftes4w=,iv:OirzuC2oD2lWqf4oHMalZPnx/dJEVxlesW8DPKnoaWc=,tag:sDawWZ9BlPTwQ3a065N69A==,type:str]
-VIP: ENC[AES256_GCM,data:G7MtTECy24eN654=,iv:P7JMOo7y6RfGj0Qhcaz00rcn80fyamKZpsp1kVwQaVI=,tag:GkCYsbp1URdu91dl4z7knQ==,type:str]
-MASTER1IP: ENC[AES256_GCM,data:OZN7v42MuS+PnhU=,iv:NmfGjIkDU9GeIp5c/aKP4jW9UntbjaAB7mq9rcH+oY8=,tag:gq2lnY5yAjYlPVmDZ8Mh8g==,type:str]
-GATEWAY: ENC[AES256_GCM,data:99dYqbp3W6P1Kw==,iv:RB2awGOawNLXbSAoKDAbgmO86532Fcqvf1j1Do0CeyY=,tag:lmTO41HsauPdSj4k+yey8Q==,type:str]
-#ENC[AES256_GCM,data:mLYTL2JNtl3KrkMFH07y,iv:IoKwBfXo3bjYDX410V3BFQgom84bW2jva02Iu/7qqP0=,tag:sHJMbucXtRjmO5PoLEoCPg==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:n1M9SnisgfoJA0/VPUke2rGldRTCT0SQ6w==,iv:PxtZlNlkHXsKIHQ7NNc1POa7D099n+iy04S8VC3yDY4=,tag:PxgJth7KmxyAe9tSWr0O/g==,type:str]
-#ENC[AES256_GCM,data:DDg9f9sfoM5Ry97RU5FD05XJ/tqG0/Sb+w==,iv:JIlN9oH1GdOC9a1+uepE0kKSrbQDnUDHzZxFeIUJfMc=,tag:gCpck6PKBMa59kiHuvHP5w==,type:comment]
-NGINX_INTERNAL_IP: ENC[AES256_GCM,data:ytzECKsQeD91itas,iv:I/9ff8czAXmqKa12WMIH8lzGWX8VrzDE2Ju3HbKbSOA=,tag:sz6tE9VCX+O7w9F7lr4Pyw==,type:str]
-NGINX_EXTERNAL_IP: ENC[AES256_GCM,data:DvB8tRQTDkypslc7,iv:g10itdJUkEPS5ETJ98coVv0y2GdziFbq72nCrnj7hDg=,tag:WCvusp7sq5GwxX30aAbqug==,type:str]
-IP_WHITELIST: ENC[AES256_GCM,data:J2TB75BghPDCR16YRbfAIkCAi2vyJuGF5Js=,iv:vXH59HkFrsT9TF5a4a1hpubrkQ6zmz91BIYXFTG803I=,tag:/fAWmmOlKB0C33BqK8C3hg==,type:str]
-BLOCKY_IP: ENC[AES256_GCM,data:pZ3NJTSG41lx8mXA,iv:PVZT9rvGG+xW/PAWwJSfD2YVpXY5bybAFnE5JSH9zBU=,tag:mKSOMrB4QXQe06pix3LP7Q==,type:str]
-DASHBOARD_IP: ENC[AES256_GCM,data:0g0y3a1tKoAhiU96,iv:kubYI8iDdQQXVT/hC8y1JbrfQxGw6iyJX77ojDeIFjw=,tag:EZKIswDRSBN3u5b67DYFVQ==,type:str]
-WG_EASY_IP: ENC[AES256_GCM,data:IahkZvqKBJux9IKi,iv:530dBpRAvP5978LLQC+vgaALukKFMaT3bRDMs0iU/JY=,tag:iLGN1q1U8Q8zWoCJiCpCZQ==,type:str]
-MINECRAFT_IP: ENC[AES256_GCM,data:401AxuPqAAuYXmm8,iv:m41X5N/PcKbJPnIfJ09iinog7EdaJ7xd5VzIaSitQHY=,tag:AjWJWMxHNqwDxEMkyNOS7g==,type:str]
-#ENC[AES256_GCM,data:xrPW3g+haoAB2TCpYUpINI1t,iv:S3CWM4pBQGYmaF2Nya7xx9xzwWlHoa4dV9YXWbpKmyM=,tag:dY+U5JuMZYMJFrwWvLU6Bw==,type:comment]
-BOREALIS_IP: ENC[AES256_GCM,data:bKi6dyyNVR/iyXk=,iv:KSqBKUoLy0+EiTnq/0hrx+66NZOF7XcAG3h5QaRihWQ=,tag:uWl6f/7wYcinlVuHPM/Abg==,type:str]
-#ENC[AES256_GCM,data:pxvuKPTBgEg+LOBzsK1WJg==,iv:P7X4u4VPzxSQ78QBUXV2YGbVVef+4sz8mximcmSRBiA=,tag:Rd4E2GiMM4pRi4DN762r5w==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:enGr+QaEb2gQ4+uDTg==,iv:WU4sGKdILq6zjZBP+7StY2T490NLRES+fLCj578X2gI=,tag:utRaar0XNKvopB/4VUj+ZA==,type:str]
-DDNS_URL: ENC[AES256_GCM,data:GQkGDx/bYUseorrf2fLOmhHu7VQ=,iv:QZn6IJzV59AYs4cj22N49qU6QzDQtjHBFoSJumaEhcE=,tag:SUG4yOI4zhnQXNjKs4wbMg==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:yEEyleoWYeatTwMyq8pvhIzNSg==,iv:gkZesZ7VFONvlvHHqZSzM220asz/yAa2EwNej3YShb8=,tag:N1y7Q+Z2tojHKvSfMy6kvQ==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:yCKO9nUK+eWbKbS2wWqRp8XaCBtnBaJ2dhGaatMN5uhKMG6ZzYxryA==,iv:qMBZeu9S9Cd4krAJ+Ykor5OWKp3ZhxxBGeaN7AL0jkM=,tag:C53QBZMR0CG+BOTxJrz0xA==,type:str]
-ZONE_ID: ENC[AES256_GCM,data:n2ZUel2hsAphIdib7R0NS+Vxdn3a48jgi8jAGfdK8D0=,iv:KvM1LakVOH1746Qs1E2YL6YPlQPs0ywfkGs1nz+bUdI=,tag:0x4Oneq/We67krkQoZm17Q==,type:str]
-#ENC[AES256_GCM,data:GOhd6r/kPf0=,iv:ql7kV67l66NJlwN5OVKSm3McIVbAw1PzhtIS6FOIEkw=,tag:57kfry7/1x2ryQF0MsXhXw==,type:comment]
-GF_ADMIN: ENC[AES256_GCM,data:vXko+U5GDesT,iv:SWt6efCf353d4ifYSIyd7SAvtA0wW90MjCsA34DaYBM=,tag:w2axe6d8cKozIE3Yu6qZxQ==,type:str]
-GF_PWD: ENC[AES256_GCM,data:XKkRGPddf4Q27QwJUeZEOM8RFt5RVlVn,iv:2Kvb06U7Nab7Yf7Y89nCzq3U7r4JVOimE57BCjsBfSQ=,tag:2oKlVcF1zFJP4qmqGsr2MA==,type:str]
-#ENC[AES256_GCM,data:wLdH+woHO6QQqA==,iv:zQFG34ZQUC7g6BwUVxFonUX1Wf/7zQKeSu7Rlreqy64=,tag:o/zrjpL5jaHT1AofpjG4+A==,type:comment]
-NEXTCLOUD_USER: ENC[AES256_GCM,data:+srS77Fn7ot4,iv:f625v0xJTs7UXaqKFM7QIJlD9QIVWAlBLnZCqGyb7Go=,tag:1pj9mBK/lJqTSTtD8yeIwQ==,type:str]
-NEXTCLOUD_PASSWORD: ENC[AES256_GCM,data:GhPiARr31BtWnXrLGA7p/OtLuCg=,iv:1RYCJ7T3FdWQUTeaqMcNETLNhyHyLtBFc/hup/lUnjE=,tag:YEDz3Co/nM/QcSNQjgQA/Q==,type:str]
-NEXTCLOUD_NFS_PATH: ENC[AES256_GCM,data:jqFIWs3Tct5B7BrvBsZW2rvG8p9HO6EB,iv:gQIZx55dYu8msiT7HhT386k69jTe7Z4rSYmL3xVHg4Y=,tag:7TlOj4d3wKu8vZpqv21VMQ==,type:str]
-MINECRAFT_NFS_PATH: ENC[AES256_GCM,data:QWakSrUhR/vsTYMY5mdzEd7u+g==,iv:GZGiMIn69E1XULMCjCL9zRwyZIO/xwSi4Aa9GPGDt/w=,tag:es801vY0G0BimpZPJXo2BA==,type:str]
-SPOOLMAN_DATA_PATH: ENC[AES256_GCM,data:4Qg76P7zb5mCz9T7JpCEQ4Vs,iv:LqpUQY9ZZOrWGtgEdIffvvDf4wI2nA1qRPHK9K1hXUQ=,tag:J5gcK6S8Nz1VNO0T/zxbEg==,type:str]
-SPOOLMAN_LOGS_PATH: ENC[AES256_GCM,data:/iTlUJFO+ur2oFqdR/sB7rMrMXs6Epk=,iv:IzCAMbJMyjYEQ9GReKD1feG6/9PRPl5BONN+erhye28=,tag:6I7Tz7/gAQWlGDGsmbVE2A==,type:str]
-HOMEASSISTANT_NFS_PATH: ENC[AES256_GCM,data:NB9a/sM1Mvbpmaf40SChgZhOwAFhvDyB,iv:HBLvKf/tJUeFQgw3qZSOoRSY/NtByN8wF9juE4s9rJI=,tag:tApVmGtZ8/ZyTYxh9NgEtw==,type:str]
-SEARXNG_NFS_PATH: ENC[AES256_GCM,data:rz757tObd6OL19bDjs8dkQ69Q/mcMHNC,iv:sYL/vnRuZEEvKgzbfio6cHgsLBg8VV93C/54CGz89DA=,tag:3BcO1FPGW/CFjEkhClbkcg==,type:str]
-#ENC[AES256_GCM,data:3um/g6Rv0po9pSGNUdeXo6E=,iv:gJC7i1NImJkY1tHB7d6OzEOOH/3z8rO4S6MugqCOvZ8=,tag:b1KHL87mMizWr7aydnGCYQ==,type:comment]
-METUBE_NFS_PATH: ENC[AES256_GCM,data:N/zU/7PgJL9B2G30dL6TUIeOduZKoG2bzpM=,iv:8fvc7u9QqxpO5VqhrjtG9IX8yXj71N7k8NAtWRBwtvE=,tag:QRSDrrB1z55PnGgWs2pxXA==,type:str]
-VIMINARIACOM_NFS_PATH: ENC[AES256_GCM,data:SVMQezWin97KhfItHsj6nIzPMGGQMbeIQLQvwLUhTbiGbYYvVSVr,iv:EKCuo5fpDewmqgN5bEDOgCTSZOdkoBlOHTkT9RYPxwo=,tag:QeKRP8uShaGLVhZuTb/n4g==,type:str]
-OZRATES_NFS_PATH: ENC[AES256_GCM,data:sUwq5JM/ZVtTi3jV1pj/e5odq5wLQKPJbl8WQnY=,iv:eE99MR0do28WAihFiV6KCBx3yF88B5XSzacZ4OtBjTw=,tag:BH8mdnrl5X0f1HFBRyKNXw==,type:str]
-#ENC[AES256_GCM,data:94Xt38CU096FYFr8+Iv6h777NBJLWD3MKs3nAIPrY3AR2a4f6bFUhlpZ6LOOUdtU0zIcdgvQ2/0=,iv:CvpRgLuTeqj6nq2RmqKKwZPFSibvvgvvoJK84pBiGKQ=,tag:WFfsOKOWWFKableiVRxTMg==,type:comment]
-#ENC[AES256_GCM,data:Y3iBvi9BeCIPw2GIs4D9rvMG5YYT+zYb5g==,iv:XnxTRYrhn1MsQ5aqcex+y496G9fEdVrBZSvQETgX78c=,tag:ch/i1+EYcrUNn5Pv0AfS9w==,type:comment]
-#ENC[AES256_GCM,data:QLaZHQFKhHPIetNcFUpYwN0v9jStDCb2qg41Wj5UNHNjnGzTyeSBXZrS4lDz/ZjwhycjzivaOyOcUfPe0NnNfjERJ0dYeR3d8k9qeb0=,iv:HUzzB7tgyN27q3IkjEzdT/snljemUNVV04IelYbUgJ0=,tag:EXW+P3Kw28yuKWCRSYQELQ==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:It0ItmjVtDCojHkqwKao3a00YS5/PdkR/xI6ITVFr1mDUOsdwtGHVdt6/g==,iv:JFni4h/SJbQsMBLzBdZ9Ca5cb2JDfjdwCbkMwVNKIW4=,tag:H9ftDjIFt5CRLk7diW1YjQ==,type:str]
-#ENC[AES256_GCM,data:IGltaTWwp3BvpZDoRnPZYtFZ0s9v0D7+8YlTUApypjY4AITxqiwr4MGF4tNWErBtuugRem1OnLbX8wvhScv3ZG375ldzZ2c=,iv:jJgixeF34bQ/vO7qVP0Sl5HhChVDXCBL3n/yGvjrB+U=,tag:BhCIZDNqzEMOPStEVcH+pg==,type:comment]
-#ENC[AES256_GCM,data:LrL0FD/5GU+rpcQqnjm9d7PBKx4aBoBxFyBWRdFXrczpqWK8ykkgtrN+/baZtxKeamVVwa5L,iv:N53vu80b/xEk9cIiwC3NSH8V5KqPazSSGyTqFVkyzYM=,tag:2OXIZB1ykR1hffB3J+a57A==,type:comment]
-#ENC[AES256_GCM,data:17qvlQLe2MFmzbxwzZ1J21LqxIU/jc3QO6YdxcTc602C94E=,iv:si427nr20XNzKEHQ+XzTQyWCFJv/peq1fatB8uh2Uwo=,tag:ePgsteIPKBQafVcbW4sy3A==,type:comment]
-#ENC[AES256_GCM,data:GC4DLl9CfACVe/4WOiYUSGTTQvolxWY/m9VwETcahk0RitMXQ0iL,iv:qfT9inIoBFxSunpIwqeto8HEd6MvO4PTZd3b85/k0Qc=,tag:EaobhdY7x3SBIE/OSkFBfw==,type:comment]
-#ENC[AES256_GCM,data:slyDUf5cARPR9wJkbhw=,iv:PwFdqR6dCk7Po/liJJIQQkknUlqhqMD2dfq58qmAQbo=,tag:OQHlSoHidU0TqDsSyFXgQg==,type:comment]
-PODNET: ENC[AES256_GCM,data:C7tNIBRa25eP/HMpTQ==,iv:YdDaOwDo7bdYh3YpM5590x2xkHcpP7GTgCUbLgmtgrA=,tag:kAqB43ybPBrqIJwDEIlyig==,type:str]
-SVCNET: ENC[AES256_GCM,data:PRMYo/o2bWY9qfCyVA==,iv:v8g2dlRTth7njnQ3Il0ZBLj9RhF2sL4Aa5KWlfyZqg0=,tag:454rpBLoVd+P+7Tvy9MOlA==,type:str]
+#ENC[AES256_GCM,data:19giWHqaeDlGhxDb,iv:wx0p9Ea9GPY+yie419Zp6q3kc0O+QPFs6Os4YD+44KM=,tag:3GABG0XDUjKC/UAdVkEbrA==,type:comment]
+PROXMOX_IP: ENC[AES256_GCM,data:ZwYIPo3E3bVVJ3A=,iv:tr+BGaTRPU4Nv2unGu6g2fmtj7MB+MVKK9WQ8/Dwng4=,tag:lQL4MI/8dH7UD1RyGJD5NA==,type:str]
+VIP: ENC[AES256_GCM,data:U2awUTp2DIV8VLE=,iv:taLn11qIJ4ElIndWO//wCOG7lgTtakhfkYaPDy5Rics=,tag:jlz/ZkXP6+u83clxZZG6Bg==,type:str]
+MASTER1IP: ENC[AES256_GCM,data:Pqp5LM3NVAiu06Y=,iv:KjPm+8ILvAJEB6teHtCXu+XbwmUteDWWylRCU4J+kZ8=,tag:BvzXOM3aVS7ahbl49uk7xA==,type:str]
+GATEWAY: ENC[AES256_GCM,data:LPNI7uO3TPehYg==,iv:K//yJhMCpMv0eyET9RXaUo5xle6dXTL7C5yN2dB8G4c=,tag:SLem1YZhPHBYH4b5EC7wGA==,type:str]
+#ENC[AES256_GCM,data:hERAz4u58XT9OkY50PLY,iv:v3TFAZbnVpuzVO3N+qj5bjWIlUOa4dRQP+MrclIWg+8=,tag:QNI2vpfcxiE5zpCsDOdf0A==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:SyLopIHCi2AobIzanmI0CjtBVEk34SCW7w==,iv:uUYhfE2rmAy7xJsRejf3NCx93pb7M9bQDoZBZKpw2Mw=,tag:jZwiz4NHcUUbAqXfod9kgg==,type:str]
+#ENC[AES256_GCM,data:XcdSLDxvnGHenrcSGbo4U+zSmkon0GLixQ==,iv:x2nWLinPMkyMO5WMsPB8Ojks2YBxUTeK7NprjtOuebQ=,tag:1Nj3nL7P2i8FNNXy5JFUhQ==,type:comment]
+NGINX_INTERNAL_IP: ENC[AES256_GCM,data:G6uGjxLEEccDkUVz,iv:9xuZWNWYCggLJZyqxaDw2L9hKSdj41Fdnzu7xlIpL9s=,tag:GyF7LgUQeK7X6osnj8TY4w==,type:str]
+NGINX_EXTERNAL_IP: ENC[AES256_GCM,data:Bm3ZLdH3P7cDq8MI,iv:IPCj9Lqc6gdk2Ir4x4BmMxybCp6/Xi1pcaW437JGUtw=,tag:iJ6lIJPt0oEhxQwP1jcFSQ==,type:str]
+IP_WHITELIST: ENC[AES256_GCM,data:40YRIOBD6PtViZaDtVV1p0BJcGx/IpwNEpc=,iv:oqoNOM6aNM9oY61/uohXQwuPRhQYgpohV8N4Z9BE42o=,tag:uuu7uhrwa+ms6SSm39xPqw==,type:str]
+BLOCKY_IP: ENC[AES256_GCM,data:taF/ccV5b482hXnZ,iv:wHno6BIra9xgiHpZXn3ADAXCBlE1NPuI/VvtkHxjn0M=,tag:tlW20mATxludExk/RpW4Gg==,type:str]
+DASHBOARD_IP: ENC[AES256_GCM,data:Ue8x4x29velvFA+f,iv:WKeyv6R0sYZLNv+6yn+m652dzgMkVSfqxwWp9JOZvSQ=,tag:Gfb22Mp8GDilNetc5uen6w==,type:str]
+WG_EASY_IP: ENC[AES256_GCM,data:yZv8KNq9mXuJK1Pq,iv:0piMs/KhJTApxdezC2vjYWJA4DzZXQECGqTON8LePgk=,tag:XjjSdFlZFIS9rDwVDpNPVg==,type:str]
+MINECRAFT_IP: ENC[AES256_GCM,data:1XatNugp5jmicGC4,iv:wqj8kWpdXWBYZTsStyLUXvW+Z/WY76cNjHiGLJitWqA=,tag:O6Ie8+NEshsIWZEPXDZThg==,type:str]
+#ENC[AES256_GCM,data:motAPFpGH/mHPMJSmspBJO9P,iv:H9Z2SLiTMaueE33Tp7iRdBifl+SaiIDXWBh1iUuS9TM=,tag:FOsi89gvARhQdv74CCGlQw==,type:comment]
+BOREALIS_IP: ENC[AES256_GCM,data:srGHaynBlDVyGG0=,iv:cF7VRYIy44B4AKvhaa1xDWwCgRhsiKPpWB3XjK9KjPc=,tag:JLqJ0z4bkF46FC2gFpjOcQ==,type:str]
+#ENC[AES256_GCM,data:MNpmHZ6RnVPxjM6azb8Usg==,iv:s1SoXjRcFbHxUBy6L2unFMIQjfBG7Z2LzngM8tuLPvo=,tag:pIwI4Jf8lwYsZjSz0DC+mw==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:4DAL4NYRUZvAWtkHyg==,iv:512cWsuQC5159O81TVs8Fd5MCYH4arPdH3CFAN0J9yo=,tag:pCRIsMzGouQDE4Wyptvgpg==,type:str]
+DDNS_URL: ENC[AES256_GCM,data:egYfaJYWDPx7K0DOkDiuSYqauLk=,iv:n0S4xxRK2pgqIMxuWbRAiLGFs3kQ698dAycoCrrkdm0=,tag:pdxAOPfEzXPJSAyNW4DnHA==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:vSItDESmR1DZWB4g0Yf4MfFkcA==,iv:62O46+ONiCIZxy9jsB3xJKcjtN3SiroA+3cpAURuRAI=,tag:0XufWW4Lnw0Mqx05iha/vQ==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:5I40uPy4lfcU6lTF8HdzTeatwFyRvn27TYa8s+heS1mJwalbYGccJA==,iv:Nv0i9U2Bl7yjFikhZh/k3VJ69POD3PBKlK83CSRl06U=,tag:4b7yZmWSHJK6UxmmCJuK7Q==,type:str]
+ZONE_ID: ENC[AES256_GCM,data:URVzvGVjTdipmB9rcw52pHcOuAbsDOQnMmubxeaTSyM=,iv:wCBIf4WGYZpOx5cSp72hrMfSJvxsinwrZhbL6uXxWm0=,tag:dSH1YzJP7nrMorxQdj+Wpw==,type:str]
+#ENC[AES256_GCM,data:2fxzuEV6Wis=,iv:SHf9lsqH0ZWfYB4QzVz86Ob7N2Y6jhmY4cf7OdHhNwI=,tag:xdQg0uIO88QVt5erEjh45Q==,type:comment]
+GF_ADMIN: ENC[AES256_GCM,data:ccJHUIHBPUkY,iv:/DFOXwYgPR5qjda1J4SgtbBwc5NjhzuRa5el8OXTJKI=,tag:GNJWYm2M0HdDR3Ux6Q7+TQ==,type:str]
+GF_PWD: ENC[AES256_GCM,data:/k48ZVKurObX7vSv+jzkCI58q6MBP9wW,iv:U6rIWFXJvgvBvC6+kYvfiIGHtarMPMMxwSVG/ZPY+do=,tag:KmSgg9B7HypbFe1382LnUg==,type:str]
+#ENC[AES256_GCM,data:rqybH6jGq5zxzQ==,iv:ez55etH5+FcdmqeBPUmujFkEXaqRzyuz3bCJxje5ilg=,tag:K0POPtjtAhLg24UNjlNjXA==,type:comment]
+NEXTCLOUD_USER: ENC[AES256_GCM,data:lSphEZ/Z3frv,iv:sfzO7dQ2YnjGLyhUd/BAdbUUHmsCx0vX/wQhqaBx1FE=,tag:J2071V7trxmSGj9SpHu1YQ==,type:str]
+NEXTCLOUD_PASSWORD: ENC[AES256_GCM,data:cjat3fyWpXGE0aaWz3wo/0Fv7VA=,iv:ADsQVZcNFQxIy1q956t1vVMlYvr6fmR7h9sb7t+pPuM=,tag:pZGjQcqYUR2wz1Yo+yGIhQ==,type:str]
+NEXTCLOUD_NFS_PATH: ENC[AES256_GCM,data:6y7+zM1cOF7qq0RPjDdAEU8UR5eXvUs3,iv:RuRZA1TFPSMAViA7yHJ8yhW9HF8Gqb1s7YDMujkhmE0=,tag:RSWs2LTE5Yzu3Mv+em7nEw==,type:str]
+MINECRAFT_NFS_PATH: ENC[AES256_GCM,data:gHqQjL6cbV6pvid5gjwpDyySDw==,iv:PH3ZisHrOTzg6QwCVKpy4zQkFk1e7ODUWoaFPXWeyTE=,tag:xDn/ryGhynLNensDgVn9uA==,type:str]
+SPOOLMAN_DATA_PATH: ENC[AES256_GCM,data:DeYpM/Ox2RsKM42Gypr1hFwQ,iv:at65NTyNdb7hUc+GEvh7YB8mT1J6KwHddaww8nNej6Y=,tag:49T+AIbg8ezqonlXHjSLfQ==,type:str]
+SPOOLMAN_LOGS_PATH: ENC[AES256_GCM,data:t5mRmFPAm6wMHIcJRnychQdcdZCusyw=,iv:LexpKQA9lcm5O9a6/YJ1sA5JrqEf5aJ1qA/CadcKy30=,tag:k4g/M7lFlVGVC2hU9hAOmg==,type:str]
+HOMEASSISTANT_NFS_PATH: ENC[AES256_GCM,data:P7gAvib8tbpvIBPI8gNaszu4izcelw0d,iv:QSs6PRXsl0Em5WKHdK1WFsp2AnJ4XSlQD/zPknpWsBY=,tag:Gqc4+vRSqJWphnvImRlmDw==,type:str]
+SEARXNG_NFS_PATH: ENC[AES256_GCM,data:e1TQa2NArx+kPqSx76Gqh0kadgTkOK4B,iv:7K6YcxDyBx6CCv4dV28x0sx+UNpwz3DaQgNEocjALNo=,tag:ec81P8eGRy6OBm/Xrj4WJQ==,type:str]
+#ENC[AES256_GCM,data:jmmLSjRjVLVqR0IZBGnBrRc=,iv:4K1EBmGOvs8JepzI6kR1CKrg3V+ptmFDXyL3PQO6u5I=,tag:f2dy8yP6P+r7vgqrtgNSDg==,type:comment]
+METUBE_NFS_PATH: ENC[AES256_GCM,data:2ImkOeODytsMfTUr09vwYnmNVBrHc8+yioo=,iv:Pr6xO/QxWk1BEZ5Xu5z8uj1QQSC4Sph8ETDWd8W8XSQ=,tag:OF5ZouukN7tAJNaxh+YzZA==,type:str]
+VIMINARIACOM_NFS_PATH: ENC[AES256_GCM,data:tqekDX9KIVVYRi19Lscyp8mbdyyAAJaYabfu2Yzkd/Zxl0yEhjPz,iv:Vxd7MoDkXdV/CGT8a9IQEj/6Mle50GlCA2wAmRaBKhc=,tag:gzXvAZ4oDgCDLYtCAT7DZQ==,type:str]
+OZRATES_NFS_PATH: ENC[AES256_GCM,data:pt0/Y/WsXNZE/TINcd5Vr+GYK0uDTWhebvTnqFA=,iv:fLvJm/uftupgmKM9BN/rBT4dB9/2DKxJb5viiGetsCY=,tag:P9Srnevk6NXNfBw1erUh5A==,type:str]
+#ENC[AES256_GCM,data:B1VNkRgjHVN0ZZ8qBnjqkvEKEVo3OMlSohfpEZh1nOBuNXts1MAOfO/W7el23j68RgIFRX3FaNo=,iv:IEPTMtVGi2uTnTYiLE5aa5fQVbKb/vWb3W8WoojbiZg=,tag:pMXdk65n8UfI8L/lvYZ6pA==,type:comment]
+#ENC[AES256_GCM,data:WXMI2LpXClLhXhEZhSVfhukBMF3V3MK39w==,iv:2f5TCUIbGeqqWmjZGxIGVOrhol0i3UwkzPipSaLxg+4=,tag:AHXnHAN/gV9UBgg8BEaDxQ==,type:comment]
+#ENC[AES256_GCM,data:77NXRZT6qpUKoyaPCscFTmj05sDdmIjFosrTXRGtlTlYoKHrv0FcWSyL4Fc+492Bf2tLd3xskUlfFO6dAZ/gL6bEsz1UVXxeqHHGUVA=,iv:hOY4zA5igz1Q39Q8QKZA6QHMvGizmRDe5F6n77WmxWw=,tag:yaM4AcAW+1Yqppg/IY3OFg==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:zvbg3oGUI6Wk4nDV4ngV6KX8RJDsDnj1Ev27wQEDh4H/20nJAGKROB++XQ==,iv:qmIj5x0OOaRZlS+3CFtw4gK9uoOWSuyyWDtmugH2R0M=,tag:AJ/cawWroOp5L5y5fmN8xA==,type:str]
+#ENC[AES256_GCM,data:lAOJFIF52iq5ThYdWDMoyfUsIAsNUe1oZO4XZwskyjbezQHwJvWHT8h00/ti9xWdVj4pOzVNM3leE5Ql4lZPWA4vT+Uhr7o=,iv:jh0Jysn4LBneG/BwnaHKXwbHvQxahs4eqYBN8rW+ho8=,tag:ZNTQv0to85daMcKyaeGgKQ==,type:comment]
+#ENC[AES256_GCM,data:EOYJ1Er//4S27nT8bYOXAOh4impuuASUcJrHPnToMs6gfzdne1Hw60+amOSH+mXfTEyn8cJW,iv:Tu62KGOgi2A6pd/XhFBB0h9wq4saqw1b1/ShQJGsmBw=,tag:ICyBHS8D7/bpYshvgguA5A==,type:comment]
+#ENC[AES256_GCM,data:JQgzZ3oVaTfR8luJ8QNfBeYBXMRDeQP+hxFA4TGKjjkmlzs=,iv:ynuSJHRyLwSeaGQcdbyNJbiV3/VY0sVPbPjjj0Wq7wE=,tag:2BWPLC8yHqomR7VYPCi+UA==,type:comment]
+#ENC[AES256_GCM,data:UfvRjUnxR50Rlw/4x7rJWdmy63I0mk2L6NtlWsCFYRYa7pMz2T5Q,iv:3fmGzOMhYwhF1Lp3dFieChuAS11h7gY3miibIYmLeC0=,tag:H0kd7RAN9ghy63xeh5VbvA==,type:comment]
+#ENC[AES256_GCM,data:j7Q1hVPyWaaXLSKWhd4=,iv:xiFQHq0VBlfe1oWL+H2hk7/Pcl7TU30LaASHB8Ptiak=,tag:d4FQUKOvtdD1Uc0mPFkSmg==,type:comment]
+PODNET: ENC[AES256_GCM,data:RQ7bD1H+AAbncjBs5Q==,iv:7Dx6bCb36A8Y3CCfW3sk4ty57SoVJ2Pb0cH0/iC9onw=,tag:2CjC3LKHaRNssEmjuxEexQ==,type:str]
+SVCNET: ENC[AES256_GCM,data:uiqD0psCdbk+CaomBg==,iv:1gmGQlzBmeiVHMUgx9WqKQjE6YwL39qriPRxOMKd+HQ=,tag:9Wg46+nO4/pHDcP3/H7RkQ==,type:str]
 sops:
     shamir_threshold: 3
     age:
         - recipient: age1mfegtkhyz3p4um3uy0v66l5fwjpsflnhu85l7atjs6n6sr3nl9asfqx0mg
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtQjNHc1VPU1dOeGErWkZj
-            TkV5czFhdlQ2M2trb0dJa203aldkYlNLWmtvCmxyTENtK29nS2FNZmRXUEtRK0M5
-            dlpwUThDaXJGd2lBSmRkS0UwZTA3bFkKLS0tIEZSRUhqOGpsY2w4bnhkOU9ncEZE
-            QjZVUWVaMURHd1BsZU9rTm5McXlWTEUKsU4eHw5QXokH3evW0MnM6yOLD3rWAx05
-            8UF1Vq+t+WEvQ23rma2nbVZ1NzoySj8xlPI9u7gHHHsFfb8C7dkhkQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB4M2lnYUl0Y1RRQVJQYU1n
+            Y1p3TWdBSENXTTlnSUVHckswNEhxRXJOR1VVCmhCWlc0YTFHdkJpT2doU3A2QnZ4
+            SHFtOUFtK01QZFQrOE42dGx6T1hTekUKLS0tIHJxQWdrcW9qVzhjQ3dndzVkOVdr
+            Wkl4TWZURGpYeEJzYmZreG1hZGJKSDQKeqgwBCbc3l/OQ7vxkbsPt5F2ShIG34O7
+            YF+tWxAcC2NjzZ0L7lX4tf+9eKB2RMCegq9q8bdV8HZvv6Qb96+pPg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2026-01-25T20:54:55Z"
-    mac: ENC[AES256_GCM,data:KdZRYgPClK9l+jNRfYhKpVYV4PxSaCMQXLOXLL2o+K5sPADM/l4/BM56bFCI6u8CZl+YSzTtwaGdOtsfKzh6bDUCdtmeiwhgQEIVrSSAJSUmbY4mGk8Foji7HdEzFFWwhfdx5SENT/yQlu6FKn+TTc/ALixqzqVfw1nb6y/AM8E=,iv:wt/XuVkSZ7uppRVqxjugFHmwsVpI9iiN3pYzN3NkC4w=,tag:j1JQASTp+80gYajD026lvA==,type:str]
+    lastmodified: "2026-01-25T21:03:50Z"
+    mac: ENC[AES256_GCM,data:FnP/ZMkc2UOR9rk4TNWjhqFDdaMKzjn2/crSLn5JWR7492+4r59T4itoYdLjN0jXIkJ5C20ocOpbQ1mgJmTJs7IxpG/FE0Il0fqZV9zhKsVPC2dcRZjLifnq6IuBzERFg0zGaGyKoqdUTjFzfhmTRoTbxp3pwXjDCl+dPKMWk6M=,iv:1uw3fBO/hDJAFxjb+9U0V2jJlkmZhPgu3IJFUaZHCvQ=,tag:bM2tieI8EOx2B+QXr9cK8A==,type:str]
     version: 3.10.2
