--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,70 +4,70 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:ES9Oo++MPpyjJt/G,iv:CN3CDDi6w74C0wGPxGWT6UEjlFNQGTBZY9IFTwhG8gA=,tag:829lUu1bfIny7WTzHWHleg==,type:comment]
-    PROXMOX_IP: ENC[AES256_GCM,data:HGIqI6Pj9B7QFdM=,iv:w4zEQJCrk2txdb7dOgqRQWtHmQYBzGSNlp2MlMvDcVA=,tag:x81ZwjC0XNcD6MmIYbmK5Q==,type:str]
-    VIP: ENC[AES256_GCM,data:MroBFD+2J/M6wzo=,iv:4oftA++BmaLhqric3Bbl4cM4T+2W1JrOke6ILDuqH4A=,tag:fxQkKAtlvbKhX5DDi1jeUQ==,type:str]
-    MASTER1IP: ENC[AES256_GCM,data:zj7gC0WcpQgnZdg=,iv:mjsUcDxAf4mntieNsIKsfeUtp3W93kbxkcLLfxgFTVU=,tag:60V0gqJNfvodjt0juJ0Vfw==,type:str]
-    GATEWAY: ENC[AES256_GCM,data:tFYZpAydYNm9gw==,iv:vY6FeUmgKWyXfUEeSHS4lDXFZYa9Uga8QNgERri19eI=,tag:EXJHuYz4Wr1fcpEi4zMkXA==,type:str]
-    #ENC[AES256_GCM,data:gzmiZANW8GyUZhnnK/N6,iv:ST5oWzeqaO8Q9AsdPWmqJ8RQIbuRGOitmpBRd2R1VyE=,tag:74tSrZTJL0WLAyMQKctcSQ==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:lM06c/7ZZZVoRukIOYOwa++4PrD8r9NiAg==,iv:3rmKaIwX0qbPI61z8nwJtbjXaMY9ISK1EtSDRBhdKSM=,tag:5IvNWiD6VTzIVP2nfmkMYg==,type:str]
-    #ENC[AES256_GCM,data:N0F1hHuoI20mX2VOotnaMBNIUg/GmVE12A==,iv:KFfK/yEBkTv26JIl6zJc3jTgrkGLuSHIBNYMITmsiW8=,tag:+JpdjbwKFUA53gKwyG61iw==,type:comment]
-    NGINX_INTERNAL_IP: ENC[AES256_GCM,data:XeZCIX1l7Y2J+zgG,iv:G0gEyYz+AEvYpevvxx1WM09rbUoOr5XZfuTMGkGz1AY=,tag:22Rs6EDCmUEbjpQeHU0rMA==,type:str]
-    NGINX_EXTERNAL_IP: ENC[AES256_GCM,data:dBwmdNMzu/D8coqu,iv:y8cSRRp/H+oMFTTi92QwAJbqVUcONgj5ag05WpWxSeQ=,tag:n3SmqtSBCsfalu/Bx27mjw==,type:str]
-    IP_WHITELIST: ENC[AES256_GCM,data:Rf3QpIfgxSKRsXgxV/0Bo1IX4GARi/NRxI4=,iv:7Y2Ftt0K0gc9xmkVKsQT/CDgjgRFKBoqYY2LeRuhslE=,tag:gR1rw+b6H0lJ0VEId5rjzg==,type:str]
-    BLOCKY_IP: ENC[AES256_GCM,data:rF4EcT4nXMz9uZ30,iv:d2rrE4/9k0VImlwd80YTGuctTKkPhVn8ALHgjw9sp/4=,tag:D2pxTzt3UReNKmVaACRcZw==,type:str]
-    DASHBOARD_IP: ENC[AES256_GCM,data:QY60XO4qOYpJcKXp,iv:WbMiXyPJWdXfccQgD3Sc/sKUvy3BnA2ISUNKoJOO01s=,tag:KZhqvjaiPvtJqTziPkQuZQ==,type:str]
-    WG_EASY_IP: ENC[AES256_GCM,data:gnJxWYw2MijrD5si,iv:XhYwlsX2eijA4fcd3jKXtU1KkP1SLmyL0B4+daa8gm4=,tag:734lTyIyBLulDSslbSTxXQ==,type:str]
-    MINECRAFT_IP: ENC[AES256_GCM,data:IM6ZxJcPi/qJj4oK,iv:18OoT7ZQ66zgdRvW6JkRp1SgwcvZfyF12yMoWfDx4hE=,tag:oPAOwX84vMq6Tq3oxOJ+nw==,type:str]
-    #ENC[AES256_GCM,data:7WQarY4Qkq5h1OgdnSn0CsXE,iv:dy1z8teJerkx6jtxsQLGtujm/QB3/St59G0wiHQKqGM=,tag:M/apXePWTufzKdtw9bYngw==,type:comment]
-    BOREALIS_IP: ENC[AES256_GCM,data:OscNpizlsOIdVnM=,iv:Al9otttR632mNHcujTWJUYE4uCkOmKamPHSFA+fmee0=,tag:12sEwZubZ71K1wuF3Zvq+w==,type:str]
-    #ENC[AES256_GCM,data:+SnD+OlMAs9ALMvfpWHpyA==,iv:nhvENrHepwzMQLf4qn7eiUXXlPm6RBLsxVE5PWMuun4=,tag:uar4KdNHRirCMXQyydcuiw==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:UD3AFVnLXaqSX0QVvA==,iv:I0F68lWjrXThUmM+qSz5Vs9jT5f3W5WCR3O9nnsv4xI=,tag:KlCVj03a2sy+cP9Fa+zuWw==,type:str]
-    DDNS_URL: ENC[AES256_GCM,data:C05geSVFsXX6AIaQnXaR6cNsUbY=,iv:Y7iXkA12uHGnUm7SQ30+B15JtYsvoQHJjUT+3z5hmus=,tag:W4ELw5/MxHi4TR/xvqoIwQ==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:98HgkOL3eLkgO1g+2DD+1L63OQ==,iv:nJTB3yJaL9zvaGW1xqWR7BhulPtWfanzIcvrsFU+2CA=,tag:TcMi3/uAaXXl9JeDj24mUg==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:6ngJX0Ye/nHlStgoHE18DTPPdIoOEgxveXzKuAQmyEYQRXJz615srQ==,iv:IblhlCQaOw8G2/fYkNjwm9A61LtoTwzg8mGf4/DVBBw=,tag:mQijiZJ89wI9JhgM68Zmeg==,type:str]
-    ZONE_ID: ENC[AES256_GCM,data:fe2af0Bbkp7Z+/mLMVgOZyN7aA/OMw5gUzPlYsqb2yQ=,iv:ASKfACjBxIbKoHKqRuMDCmJAVLBM3oXm1X5z4/kCM8I=,tag:x9uYQ0JFHl8j2PFjqkUTlg==,type:str]
-    #ENC[AES256_GCM,data:3cLroQP7Vog=,iv:l9PNbJvWDpdZz7SUk1rHgPTUuRdULwlP5mfJa4pG//Y=,tag:i/D1FnBXVNw1CyrLMZdqBQ==,type:comment]
-    GF_ADMIN: ENC[AES256_GCM,data:eU2kBQrjXpHg,iv:2IMep6nrIwE9neKXAPOo5buFq2PxLF72zwT4mqLYCPc=,tag:RGzd/0xCzK243UQYUJb9ZA==,type:str]
-    GF_PWD: ENC[AES256_GCM,data:03gD/ZimxViilWppui1SaCpdL9eUZqst,iv:840e1pGM+1FibvDEzb+b29DnmwnHHeIDbhWYqxb6mtE=,tag:HkzCj9NJBbJBTWTTDI9yGg==,type:str]
-    #ENC[AES256_GCM,data:i4ESX5FRhMKHgg==,iv:7QXr3poqhpR5A01q5ZwFIfIpjd5zZ8hnTPqiFUiEKeA=,tag:Qo4OcuF09X3QrKpas7SZ0w==,type:comment]
-    NEXTCLOUD_USER: ENC[AES256_GCM,data:y7j7jm2GnHn8,iv:gZ5vwvKS7gfUssoSpON4Q8ZkY2uFtS5VT8eYWOtRy40=,tag:6OAtLhUTMW3zcvcYKTZLhg==,type:str]
-    NEXTCLOUD_PASSWORD: ENC[AES256_GCM,data:GPwPsPOOSuUM4AHlpRGc6YHpKW8=,iv:Wy7yjiJssK5r1/Ydkfd7qoxToUibS4/Fxovtpa0n6Bk=,tag:eY5rG6w5RArs3b2VHPStag==,type:str]
-    NEXTCLOUD_NFS_PATH: ENC[AES256_GCM,data:nmiTwpdqdtAbfrGI8v0rwPWk6PnTO62A,iv:Ck3JoGFsooDY884CW7xG6APpnQ81y9TMljLM+VqrKdE=,tag:ckCTcwGQsrye46pzkhDT7w==,type:str]
-    MINECRAFT_NFS_PATH: ENC[AES256_GCM,data:wEWsJuXvToyoJonbjsF8qKeEOw==,iv:W+G2FOcKwnVf281/xHP0xn3E2Mmz9jWKmlLCr5g0yuc=,tag:NKUhSlC1qujBjXcLhzzBsg==,type:str]
-    SPOOLMAN_DATA_PATH: ENC[AES256_GCM,data:528bJliAmiRnTxgijNQrFZk8,iv:90EccuHVB0nM6+lvO18Y/P0ICGG6IKBI4xELHnbfsJw=,tag:zT/gZhW+d6HK/wRhMBFRjg==,type:str]
-    SPOOLMAN_LOGS_PATH: ENC[AES256_GCM,data:BiZEFCTtYfznISBkVG7RnTl2GKN6e48=,iv:iyqSHEeM+E+4mhxW3kg1jL3GWazbbDvZ4vELT+K6xyM=,tag:vQ+xkwYdQVfldKqqgY9qvw==,type:str]
-    HOMEASSISTANT_NFS_PATH: ENC[AES256_GCM,data:5/67fN/q7pigW+4F8tFkfbJQqXHCJzLL,iv:DrkgWnBADYDXKOL7SFJAWcMcELlbW84pDitbNWDkyDA=,tag:8k5ZntxDRp5VsDSaOj/GHA==,type:str]
-    SEARXNG_NFS_PATH: ENC[AES256_GCM,data:xTnTl1aJabCSDjqRd/myei54/z8SecZQ,iv:CcpmDtwO0Jn6OM06XVjhR5ndojLVGc5Qa8Ll3aSHGQg=,tag:IFE/4tHuK6BPal9L+vpsjQ==,type:str]
-    #ENC[AES256_GCM,data:Lir99Dyzo8a/dWwpDFIb21Q=,iv:9MQ4IfA7WzqLY5kp3C2gyGfvPlmU0NYMMokkRdlxkxE=,tag:QPcBGXmceP4Aa61cH2WATA==,type:comment]
-    METUBE_NFS_PATH: ENC[AES256_GCM,data:5mOoFB9wrmnW8gB65e35xCDILlOO+kjlszU=,iv:jLLT/npHPoC0XoRX/b4BX6+YhVgcJGrezCfIvqZmxYQ=,tag:tlpAUAait0tHLr6OUVPfuQ==,type:str]
-    VIMINARIACOM_NFS_PATH: ENC[AES256_GCM,data:d6FFmtPNcfbXJzM2cVbEn7B9ANdqB+Nd6BKNuAFNtR17C9x484Tw,iv:lnAs/gr9oJ+kC0VFlTHXzgcZ+Lsb31+EK3w/z4/4d3w=,tag:M/W14C3S9RycZkOL3+gr0A==,type:str]
-    OZRATES_NFS_PATH: ENC[AES256_GCM,data:eytNZY3x/H9rGiUy3AybVQqaowfr408P5RIs+F4=,iv:fNDYMAzXxdjg0cWLchVUJJ49BfyKSlVrZwQuxhGRzPc=,tag:/LAXBLtU4Dy4qb2N7P4VBQ==,type:str]
-    #ENC[AES256_GCM,data:lsNMQ/5Itb1uA2eUCLoT68zbYTudTDSmeEdS4ush8xoUqpdBf/Z6TsHlpmy2lr+ZyUwAJYa3Tgs=,iv:0dBDL5fiB0INwH2zYCOuyDNUCPX+tfl5i8gRwEUkFXY=,tag:U6vSRxkj6dr2c7LUGBpELA==,type:comment]
-    #ENC[AES256_GCM,data:NU1vewqDRdnsP4Im2MMu8WI8eQuHw+cFww==,iv:VE/FLJTFnqBsMHOjHNia89xB9zeeCZZy1hT81ZEAtlI=,tag:Q91jjRYgTMUxjZHdbL/B1A==,type:comment]
-    #ENC[AES256_GCM,data:Q++rqQ9YlGeu2f5PwyH9oGWcNUycWBE+cHp2wElooKFaWvhZYUFl6L3B4xxxHJTBMcYBLs7EbWIS+x/VWd82Qkm2ET9IOEOKM5AYINA=,iv:cDF0qi5q8X61ax7Q+G5Fp7gom2dzc450AA+cFfMLX4U=,tag:XiNY4OPWGwzHZeNQ/VYb0g==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:Xqq8rpmZiC7cwRn+yGzQwJ51t9Z58zDQD82pibhE+/G2vo8SDCe2QGNmQA==,iv:dJkpTaN4h4YHswEU5ecbWAWpZrV4LGRUYal42JKpqA4=,tag:vq0IwlLVgSkQ708oZZc7Qw==,type:str]
-    #ENC[AES256_GCM,data:T2Os43en+VEmkrWi4El9peXZnnzpfqUP+ixlHnEddoTNlREAqjQKzya9yv8cZ4vM01uWaPFyryFwO1H1jZvZ1kCmspHf2f4=,iv:23wco9J3BnkNRwqjWBI+mETwBPEBtS7OTOVDnVB4xVE=,tag:O9gHLoK9LA74/6OCbrizTg==,type:comment]
-    #ENC[AES256_GCM,data:W5mGZyIU7LGMdQDbdsPNmPZcRE+yKAGWsYvksADBLVN+AV8+6ktg/7a4W2qOWyZTMVpvN0Ie,iv:mG/RHUhy1BgWXJDKSlzcDVEiNdY5DDkC6cY9/6EvDf0=,tag:bF7dcepETWb+r08v4qgK9g==,type:comment]
-    #ENC[AES256_GCM,data:mUHIQPEu/CrC4tnmH1WVnyctg61oZqoF8IC+LXSH5CMlN5s=,iv:G+zpzqyBz1sDIo2kl5qQCOwm0r4FM/56OjwXUy4UbPw=,tag:+fWZRGSp8ca+vE6w/MjiNg==,type:comment]
-    #ENC[AES256_GCM,data:MdnE92QFYD1XiDhA8vqCy0fPHYBYPaIbr4arnG8ojfrHkUoddnJY,iv:mlf/EnIYQtF05NJ21+PgQhXHlhqOmqYD2LzDn7zlWOM=,tag:9y+6cUco8BuhBjT1+ZLd9g==,type:comment]
-    #ENC[AES256_GCM,data:oDtdgGzOOxNtXy+KDMg=,iv:80t00rPfGtniM3oNmqESCPLH9DMKEoBX/XCANnmr11E=,tag:ZNAxCeJp4z35hP6KvBk4Fg==,type:comment]
-    PODNET: ENC[AES256_GCM,data:KeApjbVABfqerqAOOA==,iv:GBDB2Oh7ILlJ6XjUmQm4jps0/9cOkdHWOMV8mUAtPhM=,tag:l+KlkV3DTLnxqqCgzR8s2w==,type:str]
-    SVCNET: ENC[AES256_GCM,data:+7KRKwOS7yNytoyCJA==,iv:ZkqCP5x0IPtzl+HPp/95E0QqmvlaChSe3DVyaGfU3t8=,tag:u0biHb0JLRq3UHEd3RY3Tw==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:E0q9zg==,iv:D7ISIMN3lPamcIB133RPNXc+mZF3Y8WzbqHyPxGsxOs=,tag:YLQ9BQtNvh3dtR61RKIXhg==,type:str]
+    #ENC[AES256_GCM,data:YIh/qN12SrcvwsOs,iv:0rUymWaWRn5uTi0ruSL1F9+swIY9M6sIHEkLs2xdaTI=,tag:/kZXAqxHUzKbkVU2NVIvpQ==,type:comment]
+    PROXMOX_IP: ENC[AES256_GCM,data:vUcYYn5jNjcsnsw=,iv:Lf3BDwQN3uU4qa9AlLX8kPZ487G9G6Z1ELeTGhlSkSU=,tag:ehJhCFo15y3VOIU9tZLjIA==,type:str]
+    VIP: ENC[AES256_GCM,data:YJJNRv+CmB3P/KA=,iv:lCxFt5IbO6XeM2TUx0LUZQSFExSQI3peBqYzddCPJnc=,tag:EgCKtFnTgwL+3n9D32dcMw==,type:str]
+    MASTER1IP: ENC[AES256_GCM,data:8NxHA7puko9OyUM=,iv:bZO2sZAt6Cq7TKsd5qzqnu0LWg9/uZ4rNjP4O2Auy9o=,tag:tVZJVPLYWeD8nd5Z15jSGg==,type:str]
+    GATEWAY: ENC[AES256_GCM,data:KcfzmhfBMY1iXw==,iv:3FR+piiarO6XyTTP19upLC9cxb/qLsvcC3P0AGmc9Mo=,tag:CZjsNxSl7F1cD2euxLPabg==,type:str]
+    #ENC[AES256_GCM,data:370KJFn8tC+57c/j0caU,iv:p+yldNOfMr6P7+NyhW6K6Z5nNVZghe3uN3uj80uMaIc=,tag:ER5i2IDWtnjjkH38oPNCVw==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:bX9BBCMVnXbAw8uc9TFoMCXTFaVUzsbpWA==,iv:R2uIEs8SVB9/TAbNqa/9IoXe97cSngQAwCjQZEJSRvo=,tag:XNiI4ebk+wmmdOpwweB1kQ==,type:str]
+    #ENC[AES256_GCM,data:gBxSBBeCKWuMLRLcudMnsYR7bSmEQIWikQ==,iv:XvpU5h7SniTmV3MAEr2Yv2+J+N9nJIOqRvFFMTXwIxc=,tag:qddFUR4rWC5ogP6kf29Aaw==,type:comment]
+    NGINX_INTERNAL_IP: ENC[AES256_GCM,data:B65a8DzGToyjqX7Z,iv:XoYCjf6SJ0l9cQKaP+Wc91nn5eS+6rI7k6peKTMSOtA=,tag:Z319JZwYWEP91PR+mZIcpA==,type:str]
+    NGINX_EXTERNAL_IP: ENC[AES256_GCM,data:2VbIRxdmiCS03gxU,iv:Sm5v7bXaDgQShOOmz4LZZIzMMg/FTuUF4Rm2qHU2mW0=,tag:P7FvR67OQ7ZjBMFC9KA01g==,type:str]
+    IP_WHITELIST: ENC[AES256_GCM,data:xVxe6D9OhPxhyPih6fyaLbqiVpRZf5uY05Q=,iv:MZbj1qKwVyVz2HvX102Qyh71g/LEN6zMbDflJQIs9Mg=,tag:QP5y9QiVCAlBDGfEJECTTw==,type:str]
+    BLOCKY_IP: ENC[AES256_GCM,data:oXxgCRYorqG93Gic,iv:Fq4KZxjQuXxGy8SyDc3VKAoCOHJFSV+AMoF2xw+jm1Q=,tag:32cBkKpUV9LYgdG/bkXb7Q==,type:str]
+    DASHBOARD_IP: ENC[AES256_GCM,data:VK3XiPHEN5xApqBY,iv:1LYLm71h/VQx3/C7T6/cLh/6sLt+Eez2gIZ8zhagQac=,tag:tchD2WRZlVYe05G1nCBKEw==,type:str]
+    WG_EASY_IP: ENC[AES256_GCM,data:nQtlK03+4+mYENfa,iv:jZqXWPNaE3131wGTr5CnQ66UE32R6qgqIJCNpGQeWt4=,tag:F3sqgUWw/64Mpu6DUuF1Fg==,type:str]
+    MINECRAFT_IP: ENC[AES256_GCM,data:Fot1tOYH7b2z5hwE,iv:62pOL7Fadj1SIHBHiOwv2zndI3bFGYevkxaTqt8Q6vA=,tag:j3Xxb5W6JdXPWaQSQCMP/Q==,type:str]
+    #ENC[AES256_GCM,data:yxs+qDsHYHWlYZWFMG3F2FHx,iv:rO+uikjgD2pnh5BL6ctaHvE6pV9o/fg5CC5NGN6LgAM=,tag:uh4YIU2g1LlySTHSyGH0Xg==,type:comment]
+    BOREALIS_IP: ENC[AES256_GCM,data:ZHLI9I6YylXL/0A=,iv:o8qZ607Ray7BilyZlHpL178564WVQOA1arf7B0ZOZog=,tag:h6CG+SjpsYF2QXpLd+jS2Q==,type:str]
+    #ENC[AES256_GCM,data:mVsMfttXdZi0mUfNP3TI7A==,iv:rnjOZmFXuBTDMlAT4mLQ9PV4LchcTk/9kKJJELZVsMA=,tag:vJy2zKfiIXuxXK7DK8nmPA==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:AYcCKk1rI8/uKDxntw==,iv:RkhKZ8bXXSR82NysjvsQ0PyJh9nXUplYOA9j98RfDuM=,tag:tVr7lH91v+/2qb3SIfWhIA==,type:str]
+    DDNS_URL: ENC[AES256_GCM,data:d0T94bpPb1kYvylD6DTQ0wHRwnc=,iv:21Q6MWe0seIbYgq9/iwThgA+RiQvFqc5i2EaYCZDRzA=,tag:+GNDBBVqXBt+y8pc++nVbQ==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:Vaz0fimgXr5ofRIxWUOwtbiZ9A==,iv:QNQydIWHkgTKeY2waipJdj0ql4ovOtvlNeNtIVXOIPY=,tag:F5BGa2uZ168x+bS24hQSzA==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:Aqsbb6HlJjj7l3zWEqKvq1SeGAyhSfTDD+a8BcNcDHqBq4W5QMo7mA==,iv:+o0HJLj/rcUNGvTShmn9O6l6OWhLe5Mjj1UStL+V7Ds=,tag:aRFGU0B+OLT/TVrq9MvNaw==,type:str]
+    ZONE_ID: ENC[AES256_GCM,data:vRtLt3y2kVkixBTXG6Yig6TU2hBh12DGtsLTTaVBik8=,iv:iFc6buaypltwH8ldRe6ackYTegsuU1W+vE1N7FT6Je8=,tag:NzBKEfkBylOORfdWqbugsA==,type:str]
+    #ENC[AES256_GCM,data:Img3DE80Skg=,iv:2twphHe5flBysw8gh1F28bEz1v/XbBkdpfB5eSQUiM0=,tag:Aoh+C28cgD3CJ4rHsnE4jg==,type:comment]
+    GF_ADMIN: ENC[AES256_GCM,data:SmUEWVM41U73,iv:8n6JyfbL65qB97lOtNqyMmkd24mz3bFVYWsBjhmRSaE=,tag:opsD+QOOemLX3hsz6rVcNQ==,type:str]
+    GF_PWD: ENC[AES256_GCM,data:87HJnSyvmB60EZwRg8qIne+oOJi4Dn+p,iv:U1PCAXWE4IE4CmUrmswRSe6CSlRhh9rePwvuTkMKIio=,tag:5C86tJBWbx74GrXTUvRa9A==,type:str]
+    #ENC[AES256_GCM,data:UAoJ8F7fZdGz3w==,iv:yWkcCNQvEc15kOaoEjrvvTHG75T88RCDnSUVw8/i+84=,tag:5px6MeCjkBpxzmV7v2vh1A==,type:comment]
+    NEXTCLOUD_USER: ENC[AES256_GCM,data:xkmVTEO0LQpo,iv:0fExuCqIL+MpmWxic3PshzqPd7WavQ5nBl9e/zVICCI=,tag:kXQEzMAOnWsQMsjme4aAYQ==,type:str]
+    NEXTCLOUD_PASSWORD: ENC[AES256_GCM,data:fRS4pr60nPT/1rWaXBT4/j6VgdA=,iv:v51mpLneiBUKkQD41vNrCfq++jyTFFfVjF+0Sz5BVOc=,tag:pwiZx92AlhsdW+0P65HtxA==,type:str]
+    NEXTCLOUD_NFS_PATH: ENC[AES256_GCM,data:fJJAUe3k1KeijA5j2x6Zh8yUul469MMC,iv:6wQc9AAO+DnujqB7oWLVNnoIPe7v3zM6qiBzBqXJSOY=,tag:HOaYlj6DY4lq+IV2Jp9nQg==,type:str]
+    MINECRAFT_NFS_PATH: ENC[AES256_GCM,data:jlQbLiyKxKguD63T5SDtE95FXg==,iv:veERvskQ3WndQrqGsZytnbu339L3p3JllTX0HFdwJMA=,tag:uZIAkz3qCrPv4jpMQSAZoQ==,type:str]
+    SPOOLMAN_DATA_PATH: ENC[AES256_GCM,data:XpyvcyTW4aw1JqonH4BKwrUt,iv:ybAhiDus+4p2nJMqNAetK1FRaUhx3W5LOcrSYRe6Vh4=,tag:cZc2TUFJvgbCy51J5d4b7w==,type:str]
+    SPOOLMAN_LOGS_PATH: ENC[AES256_GCM,data:TLC2tmMPDF49f0h0IUn+/ojXiI5QrgM=,iv:7BYetinGlPSePbLKVWCYjq5ZpBwf1XjZh8vgtrXq59k=,tag:ivm/hJ7JRKY49+hX/1uLTQ==,type:str]
+    HOMEASSISTANT_NFS_PATH: ENC[AES256_GCM,data://FWGb2WB9iLi12H3VpfTSvE+DVdzIcl,iv:DYITh9LUQ6rcWsLcJ1EFZdl4rBZAzyAha46R/Kul46c=,tag:LHW8bnpIjJxBF/crdIgJow==,type:str]
+    SEARXNG_NFS_PATH: ENC[AES256_GCM,data:VBqxRQqJN+gNyjADCAm50v9WNu5dY1fB,iv:/rhZrKjDpCfEXNKotaJBDPPGKROgeZQK+nh/go1ORys=,tag:5O8CN36BWBNWMMlHbToylQ==,type:str]
+    #ENC[AES256_GCM,data:dbtECW1/YUN1iLXpI6Q7QGQ=,iv:/T2fPYq6EQHVYed3t5p+dt4k+CfPR3/1rusIc5SmIOY=,tag:NfBqMo6vHcEjkclcdTW1xQ==,type:comment]
+    METUBE_NFS_PATH: ENC[AES256_GCM,data:7JqHJ72gnOWN6KzGyHVdydEuRmfkC3Qytos=,iv:RIz0Ae1CGX+iCDqSqP+nAo6xgCYezKODPaUwSpcRAOI=,tag:XmHcZY2Lzfg2XQdTxQlgiQ==,type:str]
+    VIMINARIACOM_NFS_PATH: ENC[AES256_GCM,data:4RBKe0WdIxPXfVnPDVprnSv0AMMI3Y4XLY+TQKRvUDzuCzRLlcVO,iv:jSfVujzr0uPi9XV38ukbqd12Y4wpsLwsteAbtASpe+s=,tag:ZbQc0I3e7NW9CsUK31ZXiw==,type:str]
+    OZRATES_NFS_PATH: ENC[AES256_GCM,data:da6foxMj8kZq2+LUaf3BsM/Le+lfUBOBHU+LXbY=,iv:kymfuRnVKByqroWCM5MNFOYRlmzbOjwX6NTFYmtePM8=,tag:JimPSIScACG+GJO0MyNrwg==,type:str]
+    #ENC[AES256_GCM,data:Q2pFNYENN1WdF4W/10G23f15D8cQn6hpAwzSaHyYeXEixPZpr+KBWlrE24ChqzFEGXEnmKTdPr8=,iv:imKtKyFCyBT5Mxq2bMbgwu37NbVx0dFTvQVJV6CVJi0=,tag:5OJPJuUufbqaUTJ+H60B3w==,type:comment]
+    #ENC[AES256_GCM,data:A0kUaG0T5gPj+BYYc67LzpNVHGq/mKTM2Q==,iv:1YsyNKmYZVIVOZQuzuDHd7ReP0NUTvLq51iVTBJzMR8=,tag:KD2z9s3rMCjztJmjSa7N+g==,type:comment]
+    #ENC[AES256_GCM,data:QBscsL36LEHCeMFU/O3y3OzCCbXxAW12dPEthSoHb9yIAwR1i+WuAQwoBmQy4U2fv7o8vDvsqYb9oMqoIGqsobIzYYHR6M4ky5fPFQg=,iv:4Np8vwlkJviO68OAOlgt6dZuRWidqFdPLpaeMc+Tn7c=,tag:0pSo17BGXvSqLuBLUmqCOA==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:xUNrr02Vc1cXTKgYbS6YuTS9ViX8dYMY4n5HOE3ik836MHS6UvLBrKGfCg==,iv:9lUIyTWctjpilp4gn1WIyMTXNsjre375rXei3D43To4=,tag:4TMLtHSSzNTf1zZ+xtdqjw==,type:str]
+    #ENC[AES256_GCM,data:OUZnbro5Rc82lfzzFy3LALOdkVRGsAIAHg+Lh2h20CyKHrsivWf/kFiBcXm8X4tdreVPiUYyz3AaJRXxH1yf73tr7Nn8B68=,iv:KXz/+8tOmwoFfGFXRFhpjigMXCs7MPH4/KDmDBGyEz4=,tag:wjtUaccAC73Doi8dxxmQhQ==,type:comment]
+    #ENC[AES256_GCM,data:OCC8YPbYZJ1Mix+zF0Owd8UKV2cjv6dpYgBRVl7YjA/rplKfVI+heU65Lot5hF0TXJEXN58T,iv:mx9+Ts2KRxtxfQ4bcEw7994yx/t0DLcmGkJnb3fSuIs=,tag:IBZwVwSUT6oetjhgGX/Kiw==,type:comment]
+    #ENC[AES256_GCM,data:A77ppfTWKGnGnvuQ9eZ9rp40bgrMin7dxPz0JuLiwQsV92s=,iv:KYCr2eM/HF6LtSkWgVF47MwI12xwUgk56KD0dcwJtrY=,tag:NjQY+Qcn4YBbnRapnNIS6w==,type:comment]
+    #ENC[AES256_GCM,data:WkSQxVGhxTyI/R8so/nFrtzOkaGQPR7S0uRepd/xu2GEEVrhH+yb,iv:+Hr0fNSqkgIaxCZTQV2tYkVG2SMDg7CTWwxao+EkZlg=,tag:lSwW1PgyRpL4vUfSKUWOkA==,type:comment]
+    #ENC[AES256_GCM,data:Qknxix+1i0R1LJN2gt0=,iv:rhws4QqKDjdy9acfCgzJ6ttamtZwl2+SKCnirTUgysI=,tag:1BmE1485EVY6InEWHzCvEg==,type:comment]
+    PODNET: ENC[AES256_GCM,data:oJ+nPLOYR/+H1OWk8Q==,iv:AR8Tc7XME0E6P0GpG4UjWGiSN6wSMz/1STw+DYv95v8=,tag:IY3U18iHsq2z42bL4wkpEg==,type:str]
+    SVCNET: ENC[AES256_GCM,data:cjDtiwlcQYZcxWD+og==,iv:I6ZBXtvCtHI61UcEuu63RgcvtDBQmpdt/zFSN+zypIE=,tag:EJRfSUBhJ/4t9lYR99P7xQ==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:+imMiQ==,iv:xijoPyMWJvpQ+EUsk2iacow1FPm8serPjGQoVGN9Etw=,tag:wNCn7MFJ8sGrG+r6MuiFGg==,type:str]
 sops:
     shamir_threshold: 3
     age:
         - recipient: age1mfegtkhyz3p4um3uy0v66l5fwjpsflnhu85l7atjs6n6sr3nl9asfqx0mg
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYL0NPLzJ6VnZzMVdmTHVw
-            aVZkdHlvUTBTWWxCdml4WjJqeGVCNVlqd3pJCnRvSmRKM0ZJbEhBMmxaTFZ3ZHo3
-            NlA1NzkwdW13Q0xBMEgvdFlLVFQ2MnMKLS0tIFNXanFJd1dWeFIxdktPL0dpK1hF
-            djlGMVB6enMwVmNjbU1PUlNBMlRHVWcKmuATyLGW+0RoeOm392/MbsNAJ+xtGeLz
-            YX6szVzrYNyL9Uc3i8MFwL/SqYcVeH8IGLJPT28t0nITfHqYSiDjaw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBrUUF6TVk2UWJUVTR2blN3
+            clBoTi9TREI2RjVtazBiYkw1aGlIdjVRUUJNCis2NG5paGsyMFFXZFpFeDBFQVBQ
+            S2o5eTk2T3gveWh4SnhueStSNHVIRVUKLS0tIHM3cHpCMDBnejJxL1o5bzUxZWhv
+            bXI3N3RsNGk5VHNxcTYxcUxQVVZIZW8KOnZHvk0GuBmVEg5Hll54jo5fSOCE3zaY
+            /HywG7ggjwOpWTQhFGesiAuPICYGMhBg365rLLG5BZAh6XnqEGEWSQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2026-01-25T20:54:55Z"
-    mac: ENC[AES256_GCM,data:uMe195ZS+b1DrVgKcFBYIHY16yisPQeuIQ+yyMUbxXdJsoJ3YQE6U/MdMpqalXE1gL+3wgGJxxny1gkig1aGXq4UkJVdRGCKOOSz9svX3WiTDdE+IZjc72WLQPMS7tNHdmVZkSOwNPp19Wsp5ZpkLLTJdYh/ItMXnL2EtxyjVWo=,iv:G3rKWqYMxDffRIujAxu8Lvr+bHEmW7QMIDeLy4mHN9s=,tag:lENnpb5gzVG1DP2UyzcBQg==,type:str]
+    lastmodified: "2026-01-25T21:03:50Z"
+    mac: ENC[AES256_GCM,data:3wciIuNcNEJsG5HK3gIrkmBqhNEl7BW9VW1hhCBkt2W/kqiccN2IKo/wFatWt63Z172iZPbgkb5H/42ols33/gYz4JJbZGBURy8Q0myYd65jwMuPYiSgI5wy7DHEo5+aherOTIGQCOPspIC5ZZcMQCMKY0TE9+EFnk5zU/oySrA=,iv:nN+oH+hVjvk16c14BPi19dOsP5rhwMd3WnQfZ9pj5BM=,tag:sfmvCTEISEXZJ4oRden8YQ==,type:str]
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.10.2
